# Pico-Docker-Environment

./: README.md  SPI_cheatsheet.txt  dockerfile
.github/workflows/: build.yml
4x4_matrix_keypad/: CMakeLists.txt
4x4_matrix_keypad/src/: CMakeLists.txt  main.c
ds18b20/: CMakeLists.txt
ds18b20/include/: onewire.h
ds18b20/src/: CMakeLists.txt  main.c
examples/ds18b20/src/: main.c  onewire.c
examples/lcd_module_16x2_I2C/include/: lcd.h
examples/leds/include/: led_programs.h
examples/leds/src/: main.c
hc-sr04/: CMakeLists.txt
hc-sr04/include/: hcsr04.h
hc-sr04/src/: CMakeLists.txt  hcsr04.c  main.c
ir_reciever/: CMakeLists.txt
ir_reciever/src/: CMakeLists.txt  ir_reciever.c  ir_reciever.pio  main.c
irq_leds/irq_blink_btn_led/: CMakeLists.txt  main.c
irq_leds/irq_timer_gpio_leds/: main.c
irq_leds/multicore_blink_btn_led/: CMakeLists.txt
lcd_module_16x2_I2C/: CMakeLists.txt
lcd_module_16x2_I2C/helpers/: get_I2C_addr.py
lcd_module_16x2_I2C/include/: lcd.h
lcd_module_16x2_I2C/src/: CMakeLists.txt  lcd.c  main.c
leds/: CMakeLists.txt
leds/src/: led_programs.c
multicore_led_test/: main.c
pwm/blink_led/src/: CMakeLists.txt  main.c
pwm/buzzer/include/: buzzer_melodies.h
pwm/buzzer/src/: CMakeLists.txt  buzzer_melodies.c  buzzer_melodies.c.save  main.c
pwm/living_led/src/: main.c
waveshare_1.83_LCD/: CMakeLists.txt
whack_a_mole_2leds/src/: CMakeLists.txt  main.c
